<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.test.admobtest.MainActivity">

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
    </com.google.android.gms.ads.AdView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:ignore="Suspicious0dp,UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnShowAd"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/show_ad" />

            <LinearLayout
                android:id="@+id/llRequestAd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnShowAd"
                android:layout_centerHorizontal="true"
                android:background="@android:color/darker_gray"
                android:orientation="vertical"
                android:padding="8dp">

                <Button
                    android:id="@+id/btnInterstitial"
                    android:layout_width="250dp"
                    android:layout_height="0dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:text="@string/request_interstitial_ad" />


            </LinearLayout>

            <Button
                android:id="@+id/btnShowInterstitialVideo"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llRequestAd"
                android:layout_centerHorizontal="true"
                android:text="@string/show_interstitial_video_ad" />

            <Button
                android:id="@+id/btnInterstitialVideoAd"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnShowInterstitialVideo"
                android:layout_centerHorizontal="true"
                android:text="@string/request_interstitial_video_ad" />

            <Button
                android:id="@+id/btnShowRewarded"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnInterstitialVideoAd"
                android:layout_centerHorizontal="true"
                android:text="@string/show_rewarded_video_ad" />

            <Button
                android:id="@+id/btnRewarded"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnShowRewarded"
                android:layout_centerHorizontal="true"
                android:text="@string/rewarded_video" />

        </RelativeLayout>


    </ScrollView>

</LinearLayout>